Update documentation inventory

--- a/docs/inventory/database/table/ingresses.mdx
+++ b/docs/inventory/database/table/ingresses.mdx
@@ -103,7 +103,7 @@ Administración de operación de ingreso de productos
       <Not /> Unique
     </li>
     <li>📍 Valor por defacto: Fecha actual.</li>
-    <li>📌 Información de auditoria, Fecha de creación de registro.</li>
+    <li>📌 Información de auditoria, Fecha de creación del registro.</li>
   </Ul>
 </details>
 
@@ -118,7 +118,7 @@ Administración de operación de ingreso de productos
     <li>
       <Not /> Unique
     </li>
-    <li>📌 Información de auditoria, Fecha de actualización de registro.</li>
+    <li>📌 Información de auditoria, Fecha de actualización del registro.</li>
   </Ul>
 </details>
 
@@ -133,7 +133,7 @@ Administración de operación de ingreso de productos
     <li>
       <Not /> Unique
     </li>
-    <li>📌 Información de auditoria, Fecha de eliminación de registro.</li>
+    <li>📌 Información de auditoria, Fecha de eliminación del registro.</li>
   </Ul>
 </details>
 
