--- a/docs/inventory/database/table/ingresses_details.mdx
+++ b/docs/inventory/database/table/ingresses_details.mdx
@@ -218,7 +218,7 @@ Detalle de operación de ingreso
       <Not /> Unique
     </li>
     <li>📍 Valor por defacto: Fecha actual.</li>
-    <li>📌 Información de auditoria, Fecha de creación de registro.</li>
+    <li>📌 Información de auditoria, Fecha de creación del registro.</li>
   </Ul>
 </details>
 
@@ -233,7 +233,7 @@ Detalle de operación de ingreso
     <li>
       <Not /> Unique
     </li>
-    <li>📌 Información de auditoria, Fecha de actualización de registro.</li>
+    <li>📌 Información de auditoria, Fecha de actualización del registro.</li>
   </Ul>
 </details>
 
@@ -248,7 +248,7 @@ Detalle de operación de ingreso
     <li>
       <Not /> Unique
     </li>
-    <li>📌 Información de auditoria, Fecha de eliminación de registro.</li>
+    <li>📌 Información de auditoria, Fecha de eliminación del registro.</li>
   </Ul>
 </details>
 
