--- a/docs/inventory/database/table/maximun_and_minimum.mdx
+++ b/docs/inventory/database/table/maximun_and_minimum.mdx
@@ -133,7 +133,7 @@ Administración de máximos y mínimos
       <Not /> Unique
     </li>
     <li>📍 Valor por defacto: Fecha actual.</li>
-    <li>📌 Información de auditoria, Fecha de creación de registro.</li>
+    <li>📌 Información de auditoria, Fecha de creación del registro.</li>
   </Ul>
 </details>
 
@@ -148,7 +148,7 @@ Administración de máximos y mínimos
     <li>
       <Not /> Unique
     </li>
-    <li>📌 Información de auditoria, Fecha de actualización de registro.</li>
+    <li>📌 Información de auditoria, Fecha de actualización del registro.</li>
   </Ul>
 </details>
 
@@ -163,7 +163,7 @@ Administración de máximos y mínimos
     <li>
       <Not /> Unique
     </li>
-    <li>📌 Información de auditoria, Fecha de eliminación de registro.</li>
+    <li>📌 Información de auditoria, Fecha de eliminación del registro.</li>
   </Ul>
 </details>
 
