--- a/docs/inventory/database/table/product.mdx
+++ b/docs/inventory/database/table/product.mdx
@@ -150,7 +150,7 @@ Administración de productos
       <Not /> Unique
     </li>
     <li>📍 Valor por defacto: Fecha actual.</li>
-    <li>📌 Información de auditoria, Fecha de creación de registro.</li>
+    <li>📌 Información de auditoria, Fecha de creación del registro.</li>
   </Ul>
 </details>
 
@@ -165,7 +165,7 @@ Administración de productos
     <li>
       <Not /> Unique
     </li>
-    <li>📌 Información de auditoria, Fecha de actualización de registro.</li>
+    <li>📌 Información de auditoria, Fecha de actualización del registro.</li>
   </Ul>
 </details>
 
@@ -180,7 +180,7 @@ Administración de productos
     <li>
       <Not /> Unique
     </li>
-    <li>📌 Información de auditoria, Fecha de eliminación de registro.</li>
+    <li>📌 Información de auditoria, Fecha de eliminación del registro.</li>
   </Ul>
 </details>
 
