--- a/docs/inventory/database/table/product_unit.mdx
+++ b/docs/inventory/database/table/product_unit.mdx
@@ -111,7 +111,7 @@ Administración de unidades de medida por producto
       <Not /> Unique
     </li>
     <li>📍 Valor por defacto: Fecha actual.</li>
-    <li>📌 Información de auditoria, Fecha de creación de registro.</li>
+    <li>📌 Información de auditoria, Fecha de creación del registro.</li>
   </Ul>
 </details>
 
@@ -126,7 +126,7 @@ Administración de unidades de medida por producto
     <li>
       <Not /> Unique
     </li>
-    <li>📌 Información de auditoria, Fecha de actualización de registro.</li>
+    <li>📌 Información de auditoria, Fecha de actualización del registro.</li>
   </Ul>
 </details>
 
@@ -141,7 +141,7 @@ Administración de unidades de medida por producto
     <li>
       <Not /> Unique
     </li>
-    <li>📌 Información de auditoria, Fecha de eliminación de registro.</li>
+    <li>📌 Información de auditoria, Fecha de eliminación del registro.</li>
   </Ul>
 </details>
 
