--- a/docs/inventory/database/table/unit.mdx
+++ b/docs/inventory/database/table/unit.mdx
@@ -107,7 +107,7 @@ Administración de unidades de medida
       <Not /> Unique
     </li>
     <li>📍 Valor por defacto: Fecha actual.</li>
-    <li>📌 Información de auditoria, Fecha de creación de registro.</li>
+    <li>📌 Información de auditoria, Fecha de creación del registro.</li>
   </Ul>
 </details>
 
@@ -122,7 +122,7 @@ Administración de unidades de medida
     <li>
       <Not /> Unique
     </li>
-    <li>📌 Información de auditoria, Fecha de actualización de registro.</li>
+    <li>📌 Información de auditoria, Fecha de actualización del registro.</li>
   </Ul>
 </details>
 
@@ -137,7 +137,7 @@ Administración de unidades de medida
     <li>
       <Not /> Unique
     </li>
-    <li>📌 Información de auditoria, Fecha de eliminación de registro.</li>
+    <li>📌 Información de auditoria, Fecha de eliminación del registro.</li>
   </Ul>
 </details>
 
